Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2025-05-02:

- [v1.1] Self-documentation output from any command's --man, --help, and
  other options is no longer written to standard error with exit status 2,
  but now goes to standard output and sets exit status 0. For an overview
  of self-documentation features, type: 'print "--???"'.

2025-04-29:

- [v1.1] The 'case' compound command now supports the ;;& control operator
  as on bash 4.0+. The ;;& operator falls through like ;& but executes the
  next matching list instead of simply executing the next list.

2025-04-27:

- [v1.1] The emacs mode now accepts a numeric repeat parameter for ordinary
  character insertion. For example, ESC 10 x will insert 'x' 10 times.

2025-04-24:

- Fixed a bug in the expansion of $* within a here-document: the positional
  parameters were separated by a hardcoded space instead of the first
  character of $IFS (which defaults to a space but can be changed).

2025-04-23:

- [v1.1] Ksh now supports the bash-like case modification expansions
  ${var^pattern}, ${var^^pattern}, ${var,pattern} and ${var,,pattern}.
  These change alphabetic characters in the variable to upper or lower case.
  Unlike in bash, the pattern may match any number of characters.

- The SHOPT_DYNAMIC compile-time option (the ability to load builtins from
  dynamically linked libaries such as libcmd) is now automatically disabled
  for the version of ksh that is linked against the static libast/libcmd/
  libshell libraries, as it cannot work correctly on those. On the version of
  ksh linked against the dynamic version of these libraries (on supported
  systems) it is automatically enabled. Since it is now handled automatically,
  SHOPT_DYNAMIC has been removed from SHOPT.sh as a configurable option.

2025-04-10:

- Fixed a bug (present in all AT&T and 93u+m releases) affecting parsing of
  glob patterns and regular expressions, which caused the following to fail: