@@ -9,6 +9,10 @@ Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
   but now goes to standard output and sets exit status 0. For an overview
   of self-documentation features, type: 'print "--???"'.
 
+- When ksh is linked against the dynamic libshell/cmd/ast libraries (when
+  building ksh on supported systems), all of the built-in commands from libcmd
+  are now made available by default, bound to the virtual path /opt/ast/bin.
+
 2025-04-29:
 
 - [v1.1] The 'case' compound command now supports the ;;& control operator
